cf-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Cloudformation Template for Kittens Carousel Static Website on EC2. This template deploys Kittens Carousel Static website on Amazon Linux 2 EC2 Instance with custom security group allowing http connections on port 80. Kittens Carousel Static Website is downloaded from GitHub repository, then deployed on Apache Web Server
Resources:
  WebServerSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable HTTP for Apache Web Server and ssh for terminal
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
      Tags:
        Key: Name
        Value: My first Security Group from cloudformation
  WebServerHost:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-0c94855ba95c71c99 
      InstanceType: t2.micro
      KeyName: aa
      SecurityGroupIds:
        - !Ref WebServerSecurityGroup
      Tags:
        - Key: Name
          Value: !Sub Web Server of ${AWS::StackName} Stack
      UserData: 
        Fn::Base64:
          !Sub |
            #! /bin/bash
            yum update -y
            yum install httpd -y
            cd /var/www/html/
            wget https://raw.githubusercontent.com/AyseKorkmaz90/101-kittens-carousel-static-webseite-ec2/master/static-web/index.html
            wget https://raw.githubusercontent.com/AyseKorkmaz90/101-kittens-carousel-static-webseite-ec2/master/static-web/cat0.jpg
            wget https://raw.githubusercontent.com/AyseKorkmaz90/101-kittens-carousel-static-webseite-ec2/master/static-web/cat1.jpg
            wget https://raw.githubusercontent.com/AyseKorkmaz90/101-kittens-carousel-static-webseite-ec2/master/static-web/cat2.jpg
            systemctl start httpd
            systemctl enable httpd
Outputs:
  WebsiteURL:
    Value: !Sub 
      - http://${PublicAddress}
      - PublicAddress: !GetAtt WebServerHost.PublicDnsName
    Description: Kittens Carousel Application URL
